// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vlt-dropdown can open dropdown panel with basic options 1`] = `
<div
  class="Vlt-dropdown Vlt-dropdown--expanded"
>
  <button
    class="Vlt-dropdown__btn"
  >
    <!---->
     
    <!---->
  </button>
   
  <div
    class="Vlt-dropdown__panel"
  >
    <div
      class="Vlt-dropdown__panel__content"
    >
      <ul>
        <li
          id="undefined-redDropdownLink"
        >
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              red
            </span>
          </a>
        </li>
        <li
          id="undefined-yellowDropdownLink"
        >
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              yellow
            </span>
          </a>
        </li>
        <li
          id="undefined-blueDropdownLink"
        >
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              blue
            </span>
          </a>
        </li>
         
        <!---->
      </ul>
    </div>
  </div>
</div>
`;

exports[`vlt-dropdown renders correctly 1`] = `
<div
  class="Vlt-dropdown"
>
  <button
    class="Vlt-dropdown__btn"
  >
    <!---->
     
    <!---->
  </button>
   
  <div
    class="Vlt-dropdown__panel"
  >
    <div
      class="Vlt-dropdown__panel__content"
    >
      <ul>
         
        <!---->
      </ul>
    </div>
  </div>
</div>
`;

exports[`vlt-dropdown renders correctly with label "Pick one" 1`] = `
<div
  class="Vlt-dropdown"
>
  <button
    class="Vlt-dropdown__btn"
  >
    <span>
      
        Pick one
      <!---->
    </span>
     
    <!---->
  </button>
   
  <div
    class="Vlt-dropdown__panel"
  >
    <div
      class="Vlt-dropdown__panel__content"
    >
      <ul>
         
        <!---->
      </ul>
    </div>
  </div>
</div>
`;

exports[`vlt-dropdown renders fine when unbordered is true and trigger is true 1`] = `
<div
  class="Vlt-dropdown Vlt-dropdown__trigger Vlt-dropdown__trigger--btn"
>
  <button
    class="Vlt-btn Vlt-btn--tertiary Vlt-btn-- Vlt-btn--unbordered"
  >
    <!---->
     
    <!---->
  </button>
   
  <div
    class="Vlt-dropdown__panel"
  >
    <div
      class="Vlt-dropdown__panel__content"
    >
      <ul>
        <li
          id="undefined-redDropdownLink"
        >
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              red
            </span>
          </a>
        </li>
        <li
          id="undefined-yellowDropdownLink"
        >
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              yellow
            </span>
          </a>
        </li>
        <li
          id="undefined-blueDropdownLink"
        >
          <a
            class="Vlt-dropdown__link"
          >
            <span
              class="Vlt-dropdown__label"
            >
              blue
            </span>
          </a>
        </li>
         
        <!---->
      </ul>
    </div>
  </div>
</div>
`;
